--- a/public/monitor.html
+++ b/public/monitor.html
@@ -9,7 +9,7 @@
         h2 { color: red; }
     </style>
     <script>
-        const socket = new WebSocket("wss://h-heas.onrender.com");
+        const socket = new WebSocket("wss://h-heas-v1.onrender.com");
         const alertSound = new Audio("alert.mp3"); // Load alert sound
 
         socket.onopen = () => {
